--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "axios": "^1.4.0",
     "expo": "^48.0.7",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
