完善页面功能

--- a/app.json
+++ b/app.json
@@ -10,6 +10,15 @@
     },
     "ios": {
       "bundleIdentifier": "com.q526645879.y"
-    }
+    },
+    "devClient": true,
+    "plugins": [
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
+      ]
+    ]
   }
 }
