--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
+    "expo-av": "~13.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "react-navigation-stack": "react-navigation/stack",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -22,6 +31,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
+    "dev": "yarn start",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
