--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -11,6 +12,7 @@
     "expo": "^48.0.7",
     "expo-av": "~13.2.1",
     "expo-status-bar": "~1.4.4",
+    "expo-video-player": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
